Closed Bug 71740 Opened 24 years ago Closed 24 years ago

Transfer-Encoding: articles frequently do not display or crash; M09 crash [@ MSVCRT.dll - nsWriteToRawBuffer ]

Categories

(Core :: Networking: HTTP, defect)

x86
Windows NT
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: nbaca, Assigned: darin.moz)

References

Details

(Keywords: crash, topcrash, Whiteboard: want for 0.9)

Crash Data

Attachments

(4 files)

Build 2001-03-06-05: NT4 Overview: When I get a stock quote and select the "News" link to see the latest articles on a company, very often nothing displays. Steps to reproduce: 1. Go to www.netscape.com 2. In the Business section where it states "Stock Quotes by CITITRADE", enter a stock symbol such as "dcnt" (or webm), select Quote button. 3. When the next page appears select the "News" link and it shows a variety of links to articles 4. Select a link to an article Actual Results: Very often the article never appears. If the same steps are followed in 4.7 then it works. Note: this is not a Sidebar specific problem. Expected Results: The article should display just as it does in 4.x.
played with this a while on win32 laptop with dialup connection. 1) don't see Stock Quotes by CITITRADE - has it changed to Salomon Smith Barney? 2) smith barney stock searches seem to show up ok... is anyone else seeing this problem?
I reproduced this with the following: winNT build 2001-04-18-09 trunk. 1. Either go to www.netscape.com or go to Stocks panel 2. On www.netscape.com, enter webm in the quote field (business section) and get the quote (or enter this in the stock sidebar) 3. Stock quote appears in the browser window 4. Click News link 5. Click the News article entitled "WebMethods, Ford to announce deal" dated 4-13-2001. 6. Blank page loads, no article appears. I'm wondering if specific to certain conditions? I didn't have a problem when I tried an article from the dcnt quote/news page.
cc: chofmann so he can see my response.
ok, I see, as the bind man said as he picked up his hammer and saw... here is the url that gets directly to the problem... http://werpfarm.netscape.com/ns/pf/news/ticker/story.tmpl?url=/news/feeds/pf/tic ker_search_reuters_spo/defaultCA=0D340510_7&display=/ns/pf/news/ticker/story_det ail&symbol=webm we had some problems loading content on urls that had "," in them a few days ago. I wonder if this is related... I think it was darin that was studyin'/fixin' that bug.
Whiteboard: want for 0.9
darin, can you have a look to see if my theory is correct?
Assignee: asa → darin
benc: do you think you could generate a packet trace and/or HTTP log for this page to see how much we're actually downloading? thx!
Keywords: qawanted
Target Milestone: --- → mozilla0.9.1
Darin, I have a bug filed by Sol where clicking on any stock news articles served by werpfarm.netscape.com results in a crash instead of a blank page. (Same NT 4.0 platform as reported here.) Can you look at the stack trace and let me know if you believe it to be the same bug as this or a different bug? I think it may be similar since all steps are the same and it's the results that differ - crash or blank page. Thank you. nsWriteToRawBuffer [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 521] nsPipe::nsPipeInputStream::ReadSegments [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 412] nsPipe::nsPipeInputStream::Read [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 529] nsHTTPChunkConv::OnDataAvailable [d:\builds\seamonkey\mozilla\netwerk\streamconv\converters\nsHTTPChunkConv.cpp, line 340] nsHTTPServerListener::OnDataAvailable [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPResponseListener.cp p, line 540] nsOnDataAvailableEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamListenerProxy.cpp, line 183] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 589] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 522] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1070]
yeah... i could believe that there is something screwy going on with the chunked decoder.
thank you, Darin. I will use this bug to monitor the crash as well then.
Severity: normal → major
Keywords: crash
Summary: Stock news articles frequently do not display → Stock news articles frequently do not display or crash
I'll try to reproduce this and if I can, I'll try to trace it. If I cannot, I'll try to get a trace of Lisa's system.
This bug is a topcrasher, added topcrash keyword. Added M09 crash [@ MSVCRT.dll - nsWriteToRawBuffer ] to summary for tracking. Here is a recent stack trace: Incident ID 29714570 MSVCRT.dll + 0x1637 (0x78001637) nsWriteToRawBuffer [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 521] nsPipe::nsPipeInputStream::ReadSegments [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 412] nsPipe::nsPipeInputStream::Read [d:\builds\seamonkey\mozilla\xpcom\io\nsPipe2.cpp, line 529] nsHTTPChunkConv::OnDataAvailable [d:\builds\seamonkey\mozilla\netwerk\streamconv\converters\nsHTTPChunkConv.cpp, line 340] nsHTTPServerListener::OnDataAvailable [d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHTTPResponseListener.cp p, line 540] nsOnDataAvailableEvent::HandleEvent [d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamListenerProxy.cpp, line 183] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 589] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 522] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1070]
Keywords: topcrash
Summary: Stock news articles frequently do not display or crash → Stock news articles frequently do not display or crash; M09 crash [@ MSVCRT.dll - nsWriteToRawBuffer ]
may be invalidated by bug 76866. Tom/Benc could you guys verify this after 76866 lands? Thanks.
Depends on: 76866
gagan - if you can provide an experimental build for me, I can try this for you before any landings occur. If not fixed by the landing, then we'll know sooner :-) I've never seen the crash, but I get the problem with not displaying.
i played around a bit on these sites with a build post http branch landing, and things seem ok. marking WORKSFORME (which may be a bit optimistic).
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → WORKSFORME
Build 2001-05-11-04: WinMe. I still see the problem even when trying to view articles on AOL.
Darin - does "with a build post http branch landing" mean a build after 5-11? When did your branch get carpooled in? Thanks.
Still seeing MyNetscape pages not loading using the 5/16 morning build. Not seeing crashes.
reopening
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
*** Bug 77853 has been marked as a duplicate of this bug. ***
This is still a problem on Win32 2001-05-15 builds. If your changes fixed this, please mark fixed once you have your changes checked into the trunk.
my changes went in on 5/11, so if we are still seeing this then no my changes didn't solve the problem. but, it does sound like my changed helped make this not a crasher. am i correct about that?
I don't see a talkback report of this after 5/12, so I'm guessing it's not a crasher anymore.
ok, i understand the problem here. the server is sending a "Transfer-Encoding: identity" header, which we are not correctly handling. The spec actually says that if a Transfer-Encoding header is sent, that it must contain the value "chunked", which this one does not!
but we can make a work around for this very easily. patch in hand....
Status: REOPENED → ASSIGNED
Keywords: patch
change PL_strstr to PL_strncasestr since "chunked" is always 7 and with that r=gagan
r=gagan
sr
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
*** Bug 59464 has been marked as a duplicate of this bug. ***
Verified. BTW: 1) We crash if a server says "Transfer-Encoding: chunked" and that's not true. I'll investigate that and file a new bug. 2) RFC 2616 is not clear about "identity" without "chunked". It referrs to a section missing in the RFC (3.6.2). If the connection is terminated by closing the connection "chunked" is never required.
Status: RESOLVED → VERIFIED
clarence@clarence.de - which platform and build did you verify on? Thanks.
lchiang: It was a yesterday's CVS build on Linux. Also confirmed with 2001-05-23-20 on Win NT (for the crash a talkback id is TB30847740Q).
My comment on the crash was wrong. By mistake I sent Content-Encoding, not Transfer-Encoding. Nevertheless I filed bug 82577.
Keywords: qawanted
Component: Browser-General → Networking: HTTP
Summary: Stock news articles frequently do not display or crash; M09 crash [@ MSVCRT.dll - nsWriteToRawBuffer ] → Transfer-Encoding: articles frequently do not display or crash; M09 crash [@ MSVCRT.dll - nsWriteToRawBuffer ]
Crash Signature: [@ MSVCRT.dll - nsWriteToRawBuffer ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: