Fixes bug 71740 "Stock news articles frequently do not display" r=gagan, sr=dougt